--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
+    "eslint": "^8.25.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
   }
 }
