--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,40 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+		"node": true,
+		"es6": true,
+		"jest": true
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+		"plugin:prettier/recommended"
     ],
     "overrides": [
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+		"ecmaFeatures": {
+			"jsx": true
+		}
     },
     "plugins": [
-        "react"
+        "react",
+		"prettier"
     ],
     "rules": {
-    }
+		"eqeqeq": "error",
+		"no-console": "warn",
+		"prettier/prettier": "error",
+		"react/display-name": "off",
+		"react/no-children-prop": "off"
+    },
+	"ignorePatterns": [
+		"node_modules",
+		"build",
+		"dist",
+		"public"
+	  ]
 }
