--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.25.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
