--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.12.1",
-    "firebaseui": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,12 +39,9 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "autoprefixer": "^10.4.12",
     "eslint": "^8.25.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8"
   }
 }
