--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react": "^7.31.10",
     "tailwindcss": "^3.2.1"
   }
 }
